--- a/skatta.html
+++ b/skatta.html
@@ -2,7 +2,7 @@
 <p>Du har simulerat ett vinstuttag från ditt bolag/koncern. Resultatet bygger på av dig angivna uppgifter, dagens skatteregelverk samt i vissa fall antaganden om framtiden. Simuleringen är en övergripande och till viss del förenklad bild av verkligheten vilket du bör ta höjd för i din analys.</p>
 <h5>Inkomst brutto och netto</h5>
 <p>
-  Du har för år {{it.year}} simulerat en bruttoårslön om {{it.salary.value}} kr samt en utdelning om {{it.dividend.value}} kr före skatt. Ditt vinstuttag innebär ett kapitalanspråk i ditt företag/koncern på [1 165 684] kr. I det beloppet ingår såväl arbetsgivaravgifter för din lön som bolagsskatt på fritt eget kapital du tar som utdelning. Detta ger dig[, tillsammans med övriga inkomster utanför ditt företag,] en simulerad total nettoinkomst om [744 733] kr. ​
+  Du har för år {{it.year}} simulerat en bruttoårslön om {{it.salary.value}} kr samt en utdelning om {{it.dividend.value}} kr före skatt. Ditt vinstuttag innebär ett kapitalanspråk i ditt företag/koncern på {{it.totalTurnoverCost}} kr. I det beloppet ingår såväl arbetsgivaravgifter för din lön som bolagsskatt på fritt eget kapital du tar som utdelning. Detta ger dig[, tillsammans med övriga inkomster utanför ditt företag,] en simulerad total nettoinkomst om [744 733] kr. ​
 
   [Om äger <100% OCH ändrar utdelning] I din simulering äger du [50] % av bolaget vilket innebär att en [höjd/sänkt] utdelning till dig med [171 476] kr också höjer/sänker utdelning till övriga delägare med [171 476] kr.
 </p>
